[package]
name = "pgsql-test"
version = "0.1.0"
authors = ["Martin Garton <garton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres={version="0.5.5"}

tokio = { version = "0.2", features = ["full"] }
futures={}
