[package]
name = "pgsql-test"
version = "0.1.0"
authors = ["Martin Garton <garton@gmail.com>"]
edition = "2018"

[dependencies]
futures = { version = "0.3.5" }
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = { version = "0.5.5" }
postgres-types = { version = "0.1.2" }

[profile.release]
debug = true
#lto = true
